<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_margin="10dp"
            android:maxLines="1"
            android:text="@string/language"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_vn_language_flag"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:ellipsize="end"
            android:layout_margin="10dp"
            android:maxLines="1"
            android:src="@drawable/vietnamese_flag"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/tv_language"
            app:layout_constraintTop_toBottomOf="@id/tv_language" />


        <TextView
            android:id="@+id/tv_vn_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_margin="10dp"
            android:maxLines="1"
            android:text="@string/viet_nam"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_vn_language_flag"
            app:layout_constraintLeft_toRightOf="@id/iv_vn_language_flag"
            app:layout_constraintTop_toTopOf="@id/iv_vn_language_flag" />

        <ImageView
            android:id="@+id/iv_en_language_flag"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:ellipsize="end"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:src="@drawable/american_flag"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="@id/iv_vn_language_flag"
            app:layout_constraintTop_toBottomOf="@id/iv_vn_language_flag" />

        <TextView
            android:id="@+id/tv_en_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:layout_margin="10dp"
            android:maxLines="1"
            android:text="@string/english"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_en_language_flag"
            app:layout_constraintLeft_toRightOf="@id/iv_vn_language_flag"
            app:layout_constraintTop_toTopOf="@id/iv_en_language_flag" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>